# haystack

./: .gitignore  .lefthook.yml  Makefile  README.md  chatlocal.toml  pyproject.toml  scrape.ipynb
assets/: azkaban.epub  nicci_french.epub
chatlocal/: builder.py  graphs.py  llm.py  main.py  models.py  settings.py
dev/: haystack.ipynb  scrape.py
